--- a/package.json
+++ b/package.json
@@ -17,11 +17,14 @@
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
     "@react-navigation/stack": "^6.4.1",
+    "axios": "^1.7.7",
     "react": "18.3.1",
     "react-native": "0.75.4",
     "react-native-orientation-locker": "^1.7.0",
     "react-native-safe-area-context": "^4.11.0",
     "react-native-screens": "^3.34.0",
+    "react-native-storage": "^1.0.1",
+    "react-native-video": "^6.7.0",
     "react-native-webrtc": "^124.0.4"
   },
   "devDependencies": {
