--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -37,3 +37,8 @@ newArchEnabled=false
 # Use this property to enable or disable the Hermes JS engine.
 # If set to false, you will be using JSC instead.
 hermesEnabled=true
+
+MYAPP_RELEASE_STORE_FILE=lrinaus-release-key.keystore
+MYAPP_RELEASE_KEY_ALIAS=lrinaus-apprelease-key
+MYAPP_RELEASE_STORE_PASSWORD=zxcvbnml20041017
+MYAPP_RELEASE_KEY_PASSWORD=zxcvbnml20041017
