--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-native-safe-area-context": "^4.11.0",
     "react-native-screens": "^3.34.0",
     "react-native-storage": "^1.0.1",
+    "react-native-udp": "^4.1.7",
     "react-native-video": "^6.7.0",
     "react-native-webrtc": "^124.0.4"
   },
