--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -57,8 +57,7 @@ react {
 /**
  * Set this to true to Run Proguard on Release builds to minify the Java bytecode.
  */
-def enableProguardInReleaseBuilds = false
-
+def enableProguardInReleaseBuilds = true
 /**
  * The preferred build flavor of JavaScriptCore (JSC)
  *
@@ -101,6 +100,11 @@ android {
             keyPassword 'android'
         }
     }
+    packagingOptions {
+        jniLibs {
+            useLegacyPackaging true
+        }
+    }
     buildTypes {
         debug {
             signingConfig signingConfigs.debug
@@ -112,6 +116,9 @@ android {
             minifyEnabled enableProguardInReleaseBuilds
             proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
             signingConfig signingConfigs.release
+            zipAlignEnabled true
+            debuggable false
+            jniDebuggable false
         }
     }
 }
