--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "@react-navigation/stack": "^6.4.1",
     "axios": "^1.7.7",
     "react": "18.3.1",
-    "react-native": "0.75.4",
+    "react-native": "^0.75.4",
     "react-native-orientation-locker": "^1.7.0",
     "react-native-safe-area-context": "^4.11.0",
     "react-native-screens": "^3.34.0",
